Se Creo el Modulo Mesero Con su respectivo layout

--- a/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
+++ b/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
@@ -154,10 +154,18 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\background.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\img\bebidas\1485269740768.jpg" />
+    <Content Include="Content\img\bebidas\coca-cola.png" />
+    <Content Include="Content\img\bebidas\download.jfif" />
+    <Content Include="Content\img\bebidas\easy-tequila-carne-asada-vianneyrodriguez-sweetlifebake.jpg" />
+    <Content Include="Content\img\bebidas\pilsener.jfif" />
+    <Content Include="Content\img\logo.jpeg" />
+    <Content Include="Content\img\user.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -187,6 +195,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Receptionist\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutReceptionist.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -195,7 +205,6 @@
     <Folder Include="Views\Customer\" />
     <Folder Include="Views\LoginVM\" />
     <Folder Include="Views\Owner\" />
-    <Folder Include="Views\Receptionist\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
