--- a/Model/App.config
+++ b/Model/App.config
@@ -13,7 +13,7 @@
   </entityFramework>
 	<connectionStrings>
 		<add name="OasisFamiliarDB"
-			connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TEST;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework"
+			connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OasisFamiliarDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework"
 			providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
