--- a/OasisFamiliarWebSite/Web.config
+++ b/OasisFamiliarWebSite/Web.config
@@ -61,4 +61,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
+  <connectionStrings>
+    <add name="OasisFamiliarDB"
+			connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OasisFamiliarDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework"
+			providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
+  
 </configuration>
