Se agrego configurracion de achivo no se que xd

--- a/OasisFamiliarWebSite/Web.config
+++ b/OasisFamiliarWebSite/Web.config
@@ -63,9 +63,7 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="OasisFamiliarDB"
-			connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OasisFamiliarDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework"
-			providerName="System.Data.SqlClient"/>
+    <add name="OasisFamiliarDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OasisFamiliarDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   
