creacion de tabla en el modulo mesero filtros

--- a/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
+++ b/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
@@ -202,6 +202,8 @@
     <Content Include="Views\Shared\_LayoutCustomer.cshtml" />
     <Content Include="Views\Customer\MenuPage.cshtml" />
     <Content Include="Views\Receptionist\Factura.cshtml" />
+    <Content Include="Views\Receptionist\VerFacturaPendientes.cshtml" />
+    <Content Include="Views\Receptionist\MenuPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
