--- a/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
+++ b/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
@@ -162,7 +162,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\img\background.jpg" />
-    <Content Include="Content\img\Menu\Balde _de_Golden.png" />
+    <Content Include="Content\img\Menu\Balde _de_Golden.jpg" />
     <Content Include="Content\img\Menu\Balde_Pilsener.jpg" />
     <Content Include="Content\img\Menu\Carne_Asada.jpg" />
     <Content Include="Content\img\Menu\Pilsener.jpg" />
