--- a/Model/App.config
+++ b/Model/App.config
@@ -12,8 +12,10 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="OasisFamiliarDB"
-			connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OasisFamiliarDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework"
-			providerName="System.Data.SqlClient"/>
+
+
+		<!--<add name="OasisFamiliarDB" connectionString="data source=bgf.database.windows.net;initial catalog=OasisFamiliarDB;persist security info=True;user id=ces;password=uli1346$;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+		<add name="OasisFamiliarDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OasisFamiliarDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		
 	</connectionStrings>
 </configuration>
