--- a/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
+++ b/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
@@ -134,7 +134,6 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CookerController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OwnerController.cs" />
     <Compile Include="Controllers\ReceptionistController.cs" />
     <Compile Include="Global.asax.cs">
@@ -152,6 +151,9 @@
     <Compile Include="Models\RegisterVM.cs" />
     <Compile Include="Models\SessionCLS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\IdentityPersonalizado.cs" />
+    <Compile Include="Security\PrincipalPersonalizado.cs" />
+    <Compile Include="Security\UserRoleProvider.cs" />
     <Compile Include="Servics.Call\CustomerHelper.cs" />
     <Compile Include="Servics.Call\MailServices.cs" />
     <Compile Include="Servics.Call\NEtUSersREpositoryCLS.cs" />
@@ -202,9 +204,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Receptionist\Index.cshtml" />
