--- a/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
+++ b/OasisFamiliarWebSite/OasisFamiliarWebSite.csproj
@@ -165,12 +165,12 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\img\background.jpg" />
-    <Content Include="Content\img\Menu\Balde _de_Golden.jpg" />
-    <Content Include="Content\img\Menu\Balde_Pilsener.jpg" />
-    <Content Include="Content\img\Menu\Carne_Asada.jpg" />
+    <Content Include="Content\img\Menu\BaldeGolden.jpg" />
+    <Content Include="Content\img\Menu\BaldePilsener.jpg" />
+    <Content Include="Content\img\Menu\CarneAsada.jpg" />
     <Content Include="Content\img\Menu\Pilsener.jpg" />
     <Content Include="Content\img\Menu\Pollo.jpg" />
-    <Content Include="Content\img\Menu\Sopa_de_tortilla_%28Boca%29.jpg" />
+    <Content Include="Content\img\Menu\SopaTortilla%28Boca%29.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
